refactoring Profile Api and implementation
